# LearnCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
aTypes/: README.md  primary.cpp
